--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Shivam</h1>
-            <p>Computer Science Student & Full Stack Developer</p>
-            <a href="#about" class="cta-button">Explore My Work</a>
+        <div class="hero-layout">
+            <div class="hero-content hero-left">
+                <h1>Shivam</h1>
+                <p>Computer Science Student & Full Stack Developer</p>
+                <a href="#about" class="cta-button">Explore My Work</a>
+            </div>
+            <div class="hero-right">
+                <div class="hero-image-placeholder" aria-label="Image placeholder">
+                    <img src="shivam_image.jpg" alt="">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -50,28 +57,18 @@
             </p>
             <div class="contact-info">
                 <div class="contact-item">
-                    <span>📧</span>
                     <div class="contact-details">
-                        <span class="contact-value">shivam-ug23@nsut.ac.in</span>
+                        <span class="contact-value">sg170105@gmail.com</span>
                         <span class="contact-label">Email Address</span>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <span>📱</span>
                     <div class="contact-details">
-                        <span class="contact-value">7011428622</span>
-                        <span class="contact-label">Phone Number</span>
-                    </div>
-                </div>
-                <div class="contact-item">
-                    <span>🎓</span>
-                    <div class="contact-details">
-                        <span class="contact-value">CGPA: 7.5/10</span>
+                        <span class="contact-value">CGPA: 7.44/10</span>
                         <span class="contact-label">Academic Performance</span>
                     </div>
                 </div>
                 <div class="contact-item">
-                    <span>📅</span>
                     <div class="contact-details">
                         <span class="contact-value">2023 - 2027</span>
                         <span class="contact-label">Graduation Year</span>
@@ -91,6 +88,7 @@
                     <span class="skill-tag">C++</span>
                     <span class="skill-tag">Python</span>
                     <span class="skill-tag">Java</span>
+                    <span class="skill-tag">JavaScript</span>
                 </div>
             </div>
             <div class="skill-category">
@@ -106,9 +104,10 @@
                 </div>
             </div>
             <div class="skill-category">
-                <h3>Database & Tools</h3>
+                <h3>Database & Version Control Tools</h3>
                 <div class="skill-tags">
                     <span class="skill-tag">MongoDB</span>
+                    <span class="skill-tag">MySQL</span>
                     <span class="skill-tag">Git</span>
                     <span class="skill-tag">GitHub</span>
                 </div>
@@ -122,75 +121,70 @@
         <div class="tech-stack-grid">
             <!-- Programming Languages -->
             <div class="tech-item">
-                <div class="tech-icon cpp">C++</div>
+                <div class="tech-icon cpp"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg" alt="C++ logo"></div>
                 <div class="tech-name">C++</div>
                 <div class="tech-description">High-performance programming language for system programming and competitive coding</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon python">🐍</div>
+                <div class="tech-icon python"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python logo"></div>
                 <div class="tech-name">Python</div>
                 <div class="tech-description">Versatile language for web development, data science, and automation</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon java">☕</div>
+                <div class="tech-icon java"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" alt="Java logo"></div>
                 <div class="tech-name">Java</div>
                 <div class="tech-description">Object-oriented programming language for enterprise applications</div>
             </div>
 
             <!-- Frontend Technologies -->
             <div class="tech-item">
-                <div class="tech-icon react">⚛️</div>
+                <div class="tech-icon react"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React logo"></div>
                 <div class="tech-name">React.js</div>
                 <div class="tech-description">Popular JavaScript library for building user interfaces and SPAs</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon html">🌐</div>
-                <div class="tech-name">HTML5</div>
-                <div class="tech-description">Standard markup language for creating web pages and applications</div>
-            </div>
-            <div class="tech-item">
-                <div class="tech-icon css">🎨</div>
+                <div class="tech-icon css"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS3 logo"></div>
                 <div class="tech-name">CSS3</div>
                 <div class="tech-description">Style sheet language for describing web page presentation</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon tailwind">💨</div>
+                <div class="tech-icon tailwind"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS logo"></div>
                 <div class="tech-name">Tailwind CSS</div>
                 <div class="tech-description">Utility-first CSS framework for rapid UI development</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon shadcn">🔧</div>
+                <div class="tech-icon shadcn"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/devicon/devicon-original.svg" alt="ShadCN UI logo"></div>
                 <div class="tech-name">ShadCN UI</div>
                 <div class="tech-description">Modern component library built on Radix UI and Tailwind CSS</div>
             </div>
 
             <!-- Backend Technologies -->
             <div class="tech-item">
-                <div class="tech-icon nodejs">📗</div>
+                <div class="tech-icon nodejs"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" alt="Node.js logo"></div>
                 <div class="tech-name">Node.js</div>
                 <div class="tech-description">JavaScript runtime for building scalable server-side applications</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon express">🚀</div>
+                <div class="tech-icon express"><img class="is-mono" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" alt="Express.js logo"></div>
                 <div class="tech-name">Express.js</div>
                 <div class="tech-description">Fast, minimalist web framework for Node.js applications</div>
             </div>
 
             <!-- Database -->
             <div class="tech-item">
-                <div class="tech-icon mongodb">🍃</div>
+                <div class="tech-icon mongodb"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" alt="MongoDB logo"></div>
                 <div class="tech-name">MongoDB</div>
                 <div class="tech-description">NoSQL document database for modern applications</div>
             </div>
 
             <!-- Version Control -->
             <div class="tech-item">
-                <div class="tech-icon git">📝</div>
+                <div class="tech-icon git"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" alt="Git logo"></div>
                 <div class="tech-name">Git</div>
                 <div class="tech-description">Distributed version control system for tracking code changes</div>
             </div>
             <div class="tech-item">
-                <div class="tech-icon github">🐙</div>
+                <div class="tech-icon github"><img class="is-mono" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="GitHub logo"></div>
                 <div class="tech-name">GitHub</div>
                 <div class="tech-description">Cloud-based platform for version control and collaboration</div>
             </div>
@@ -248,7 +242,7 @@
         <h2>Achievements</h2>
         <div class="achievements-grid">
             <div class="achievement-card">
-                <div class="achievement-number">250+</div>
+                <div class="achievement-number">350+</div>
                 <div class="achievement-text">LeetCode Problems Solved</div>
                 <div class="achievement-description">
                     Solved 250+ problems across various topics including Dynamic Programming, Graphs, and Binary Search. 
@@ -256,10 +250,10 @@
                 </div>
             </div>
             <div class="achievement-card">
-                <div class="achievement-number">1750</div>
+                <div class="achievement-number">1750+</div>
                 <div class="achievement-text">LeetCode Contest Rating</div>
                 <div class="achievement-description">
-                    Achieved a contest rating of 1750 on LeetCode, placing me in the top 12% of all contest participants. 
+                    Achieved a contest rating of 1773 on LeetCode, placing me in the top 8.5% of all contest participants. 
                     Demonstrates strong problem-solving skills under time pressure and competitive programming expertise.
                 </div>
             </div>
@@ -269,9 +263,9 @@
     <!-- Footer -->
     <footer>
         <div class="social-links">
-            <a href="#" class="social-link">LinkedIn</a>
-            <a href="#" class="social-link">GitHub</a>
-            <a href="#" class="social-link">LeetCode</a>
+            <a href="https://www.linkedin.com/in/shivam-7814872a7/" class="social-link">LinkedIn</a>
+            <a href="https://github.com/Shivam17-ai" class="social-link">GitHub</a>
+            <a href="https://leetcode.com/u/Shivam_sv69/" class="social-link">LeetCode</a>
         </div>
         <p>&copy; 2025 Shivam. All rights reserved.</p>
     </footer>
@@ -328,6 +322,24 @@
                 el.style.transform = 'translateY(50px)';
                 el.style.transition = 'opacity 0.6s ease, transform 0.6s ease';
                 observer.observe(el);
+            });
+        }
+
+        // Tech stack staggered animation
+        function setupTechStackAnimations() {
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.style.opacity = '1';
+                        entry.target.style.transform = 'translateY(0)';
+                    }
+                });
+            }, { threshold: 0.1 });
+
+            const techItems = document.querySelectorAll('.tech-item');
+            techItems.forEach((item, index) => {
+                item.style.transitionDelay = `${index * 0.1}s`;
+                observer.observe(item);
             });
         }
 
